add dialog, extend grid syntax

--- a/solution/index.html
+++ b/solution/index.html
@@ -39,13 +39,18 @@
                     <h2>Das ist ein Titel</h2>
                     <p>Das ist ein Untertitel</p>
                 </div>
-                <button>Mehr erfahren!</button>
+                <button id="show_dialog">Mehr erfahren!</button>
             </div>
         </div>
+        <dialog class="dialog" id="dialog">
+            <button id="close_dialog" autofocus>Schliessen</button>
+            <p>Das ist mein Modal</p>
+        </dialog>
     </section>
 </main>
 <footer>
     <p>Copyright &copy; 2025</p>
 </footer>
+<script src="script.js" type="module"></script>
 </body>
 </html>
